tests/invalid_code/invalid_local_access_modifier.bs
fn main() {
    pub var a = 1
    pub const b = 2
}